--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:text="@string/discount_calculator"
         android:fontFamily="@font/rubik_medium"
+        android:textColor="@color/black"
         android:fontFeatureSettings="true"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -32,6 +33,7 @@
         android:layout_margin="10dp"
         app:helperTextEnabled="true"
         app:helperText="Enter Selling Price"
+        app:helperTextTextColor="@color/black"
         app:startIconDrawable="@drawable/rupee"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -57,6 +59,7 @@
         android:layout_margin="10dp"
         app:helperTextEnabled="true"
         app:helperText="Do not include %"
+        app:helperTextTextColor="@color/black"
         app:startIconDrawable="@drawable/discount"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -100,6 +103,7 @@
         android:id="@+id/result"
         android:textSize="40sp"
         android:fontFamily="@font/rubik_light"
+        android:textColor="@color/black"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
