--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
+        android:backgroundTint="@color/teal_200"
         app:helperTextEnabled="true"
         app:helperText="Enter Selling Price"
         app:helperTextTextColor="@color/black"
@@ -43,7 +44,7 @@
         app:layout_constraintVertical_bias="0.189">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editText"
+            android:id="@+id/sellingPrice"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/selling_price"
@@ -57,6 +58,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
+        android:backgroundTint="@color/teal_200"
         app:helperTextEnabled="true"
         app:helperText="Do not include %"
         app:helperTextTextColor="@color/black"
@@ -69,7 +71,7 @@
         app:layout_constraintVertical_bias="0.0">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editText2"
+            android:id="@+id/discount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="number"
@@ -87,7 +89,7 @@
         style="@style/Widget.Material3.Button.ElevatedButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_margin="10dp"
         android:text="@string/calculate"
         android:textSize="25sp"
         android:fontFamily="@font/rubik_medium"
@@ -101,9 +103,12 @@
 
     <TextView
         android:id="@+id/result"
-        android:textSize="40sp"
-        android:fontFamily="@font/rubik_light"
+        android:textSize="50sp"
+        android:fontFamily="@font/poppins_extrabold"
         android:textColor="@color/black"
+        android:textAlignment="center"
+        android:layout_margin="10dp"
+        android:padding="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
