--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient_bg8"
+    android:background="@drawable/gradient_bg7"
     android:padding="10dp"
     tools:context=".MainActivity">
 
@@ -12,6 +12,7 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        style="@style/TextAppearance.Material3.TitleLarge"
         android:text="@string/discount_calculator"
         android:fontFamily="@font/rubik_medium"
         android:textColor="@color/black"
