--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/gradient_bg7"
     android:padding="10dp"
-    android:gravity="center"
+    android:gravity="center_horizontal"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
@@ -78,7 +78,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:backgroundTint="#B9FFF8"
+        android:backgroundTint="#2196F3"
+        android:textColor="@color/white"
         android:fontFamily="@font/rubik_medium"
         android:text="@string/calculate"
         android:textSize="25sp" />
