--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,14 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
     android:orientation="vertical"
     android:padding="8dp"
     tools:context=".MainActivity">
-
-
-
-
 
         <TextView
             android:id="@+id/title"
@@ -38,8 +33,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="@drawable/gradient_bg7">
+        android:orientation="vertical">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textField"
@@ -50,7 +44,7 @@
         app:endIconMode="clear_text"
         app:helperText="Enter Selling Price"
         app:helperTextEnabled="true"
-        app:helperTextTextColor="@color/white"
+        app:helperTextTextColor="@color/black"
         app:boxCornerRadiusTopStart="25dp"
         app:boxCornerRadiusTopEnd="25dp"
         app:boxCornerRadiusBottomStart="25dp"
@@ -62,7 +56,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/selling_price"
-            android:textColorHighlight="@color/white"
             android:inputType="number"
             android:textColorHint="@color/white" />
 
@@ -78,7 +71,7 @@
         app:endIconMode="clear_text"
         app:helperText="Do not include %"
         app:helperTextEnabled="true"
-        app:helperTextTextColor="@color/white"
+        app:helperTextTextColor="@color/black"
         app:boxCornerRadiusBottomStart="25dp"
         app:boxCornerRadiusBottomEnd="25dp"
         app:boxCornerRadiusTopStart="25dp"
@@ -104,14 +97,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="25dp"
-        android:layout_margin="8dp">
+        android:layout_marginTop="8dp">
 
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center"
-    android:background="@drawable/gradient_bg7">
+    android:gravity="center">
     <TextView
         android:id="@+id/result"
         android:layout_width="match_parent"
